# typan

./: README.md
preprocessor/: pyproject.toml
preprocessor/src/: check_text.py  cli_check.py  create_token.py  formatter.py  syntax_checker.py
preprocessor/tests/: _util.py  test_cli.py  test_formatter.py
typan/: README.md  pyproject.toml  test.tp  ugly.tp
typan/src/: cli.py  cli_fmt.py  emit.py  errors.py  lex.py  lines.py  preprocess.py  transform.py
typan/tests/: confest.py  test_cli_check_exit_codes.py  test_e2e.py  test_syntax_checker.py
typan_lab/: dev.ps1  pyproject.toml  run_app.py
typan_lab/typan_lab/: app.py  app.tcss  router.py  settings.py  state.py  style_loader.py
typan_lab/typan_lab/modals/: confirm_modal.py  confirm_modal.tcss  name_prompt_modal.py  name_prompt_modal.tcss
typan_lab/typan_lab/screens/: dir_picker.py  settings.py  settings.tcss  welcome.py  welcome.tcss  workspace.py  workspace.tcss
typan_lab/typan_lab/services/: buffer_service.py  preferences_service.py  project_service.py
typan_lab/typan_lab/terminal/: ansi.py  backends.py  session.py
typan_lab/typan_lab/widgets/: editor_pane.py  editor_pane.tcss  editor_panel.py  editor_panel.tcss  editor_tabs.py  editor_tabs.tcss  horizontal_split_handle.py  horizontal_split_handle.tcss  project_tree.py  project_tree.tcss  status_bar.py  status_bar.tcss  styled_directory_tree.py  tab_bar.py  tab_bar.tcss  tab_item.py  tab_item.tcss  terminal_panel.py  terminal_panel.tcss  top_bar.py  top_bar.tcss  vertical_split_handle.py  vertical_split_handle.tcss
