[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "typan"
version = "0.1.0"
description = "Brace-based Python preprocessor ({} -> : + indentation)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Kacper Woźnica" }
]

dependencies = []


[project.scripts]
typan = "cli:main"
typan-check = "cli_check:main"


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]
